--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +11,21 @@
         sass --watch assets/scss/main.scss assets/css/style.css
      -->
 </head>
-<body>
-    
 
+<body>
+
+    <section>
+        <article>
+            <p>id</p>
+            <h2>author</h2>
+        </article>
+        <article>
+            <img src="" alt="">
+        </article>
+    </section>
 
 
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
