--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
 
-    <section>
+    <!-- Muster -->
+<!--   
+        <section>
         <article>
             <p>id</p>
             <h2>author</h2>
@@ -23,7 +25,7 @@
             <img src="" alt="">
         </article>
     </section>
-
+ -->
 
     <script src="./assets/js/main.js"></script>
 </body>
